--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+click==7.1.2
 cycler==0.10.0
+dlib==19.21.1
+face-recognition==1.3.0
+face-recognition-models==0.3.0
 getch==1.0
 install==1.3.4
 kiwisolver==1.3.1
@@ -9,6 +13,7 @@ Pillow==8.1.2
 pyfiglet==0.8.post1
 pyparsing==2.4.7
 python-dateutil==2.8.1
+scipy==1.6.1
 selenium==3.141.0
 six==1.15.0
 torch==1.8.0+cpu
